# pong-game

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/: Paddle.h  ball.h  game.h  game_init.h  init.h  paddle.h
includes/: Ball.h
src/: Ball.c  Ball.h  Paddle.c  Paddle.h  ball.c  game.c  game.h  game_init.c  init.c  init.h  main.c  paddle.c
